--- a/templates/index.html
+++ b/templates/index.html
@@ -11,51 +11,39 @@
 </head>
 <body style="background: rgb(252, 250, 250);">
   <div class="login">
-   <h1>Healthcare Expense Predictor</h1>
+   <h1>Prediksi Cuaca Wilayah Jakarta</h1>
     <form action="{{ url_for('predict')}}" method="post">
-      <label for="age" colo>Age:  </label>
-      <input type="text" name="age" placeholder="age" required="required">
-      <br>
-      <br>
-      <label for="bmi">BMI:  </label>
-      <input type="text" name="bmi" placeholder="bmi" required="required">
-      <br>
-      <br>
-      <label for="children">Children:  </label>
-      <select id="children" name="children", placeholder="children", required="required">
-        <option value="0">Not Applicable</option>
-        <option value="1">1</option>
-        <option value="2">2</option>
-        <option value="3">3</option>
-        <option value="4">4</option>
-        <option value="5">5 & above</option>
+      <label for="wilayah" colo>Wilayah:  </label>
+      <select id="wilayah" name="wilayah", placeholder="wilayah", required="required">
+        <option value="Jakarta Pusat">Jakarta Pusat</option>
+        <option value="Kepulauan Seribu">Kepulauan Seribu</option>
+        <option value="Jakarta Timur">Jakarta Timur</option>
+        <option value="Jakarta Barat">Jakarta Barat</option>
+        <option value="Jakarta Selatan">Jakarta Selatan</option>
       </select>
       <br>
       <br>
-      <label for="Sex">Sex:  </label>
-      <select id="Sex" name="Sex" placeholder="Sex", required="required">
-        <option value="0">Male</option>
-        <option value="1">Female</option>
+      <label for="waktu" colo>Waktu  </label>
+      <select id="waktu" name="waktu", placeholder="waktu", required="required">
+        <option value="Pagi">Pagi</option>
+        <option value="Siang">Siang</option>
+        <option value="Malam">Malam</option>
       </select>
       <br>
       <br>
-      <label for="Smoker">Smoker:  </label>
-      <select id="Smoker" name="Smoker", placeholder="Smoker", required="required">
-        <option value="0">No</option>
-        <option value="1">Yes</option>
-      </select>
+      <label for="kelembaban_persen">Persentase Kelembaban:  </label>
+      <input type="text" name="kelembaban_persen" placeholder="Ex : 65-95" required="required">
       <br>
       <br>
-      <label for="Region">Region:  </label>
-      <select id="Region" name="Region", placeholder="Region", required="required">
-        <option value="0">Northeast</option>
-        <option value="1">Northwest</option>
-        <option value="2">Southeast</option>
-        <option value="3">Southwest</option>
-      </select>
+      <label for="suhu_derajat_celsius">Derajat Suhu (Dalam Celsius):  </label>
+      <input type="text" name="suhu_derajat_celsius", placeholder="Ex : 22-31", required="required">
       <br>
       <br>
-      <button type="submit" class="btn btn-primary btn-block btn-large">Predict Medical Charges</button>
+      <label for="banyakkotarawan">Banyak Kota yang Rawan:  </label>
+      <input type="text" name="banyakkotarawan" placeholder="Ex : 5", required="required">
+      <br>
+      <br>
+      <button type="submit" class="btn btn-primary btn-block btn-large">Prediksi Cuaca</button>
     </form>
     <br>
     <br>
